2007-11-22  Callum McKenzie  <callum@spooky-possum.org>

	* gweather-pref.c (gweather_pref_create): The preferences dialog
	has been set resizable to make navigation of the locations list
	easier. See bug #462850.

	* gweather-dialog.c (gweather_dialog_create): Remove a superfluous
	call to gtk_window_set_policy.

2007-11-18  Callum McKenzie  <callum@spooky-possum.org>

	* Locations.xml.in: We misspelled Fort Worth!?. (Bug #497765)

2007-11-16  James Ogley  <james@usr-local-bin.org>
 
 	* Locations.xml.in: Rename Nottingham East Midlands as East Midlands.
 
2007-11-04  Callum McKenzie  <callum@spooky-possum.org>

	* gweather-pref.c: Remove an unneeded #include of langinfo.h.

	* Locations.xml.in: Added forecast zone for West Plains,
	Missouri. Thanks to Michael Crider (Bug #453539). In addition,
	best-estimates of the appropriate zones for most other Missouri
	locations where added where missing.

2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* Locations.xml.in: Updates to Virginian locations from
	serac@vt.edu (Bug #469356).

2007-08-01  Callum McKenzie  <callum@spooky-possum.org>

	* docs/nl/nl.po: Fix an incorrectly transcribed tag (see bug
	#448129).

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_GWeatherApplet.xml: Use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* gweather-about.c: (gweather_about_run):
	* gweather-applet.c: (gweather_applet_create), (update_finish),
	(gweather_update):
	* gweather.h:
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145


2007-02-28  Sebastien Bacher  <seb128@ubuntu.com>

	* Locations.xml.in: add zones to Wisconsin cities, 
	patch from Alex Mauer <hawke@hawkesnest.net> (bug #363364)

2007-02-17  David Lodge <dave@cirt.net>

	* docs/en_GB/en_GB.po: Added (British) English translation.
	* docs/Makefile.am: Added en_GB to DOC_LINGUAS
