@@ -15346,6 +15346,12 @@
       </location>
       <location>
         <!-- Translators: This is in British Columbia in Canada. -->
+        <name>White Rock</name>
+        <code>CWWK</code>
+        <coordinates>49-01N 122-47W</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in British Columbia in Canada. -->
         <_name>Williams Lake</_name>
         <code>CYWL</code>
         <coordinates>52-11N 122-03W</coordinates>
