@@ -1,3 +1,8 @@
+2007-11-27  Callum McKenzie  <callum@spooky-possum.org>
+
+	* Locations.xml.in: Added Kip's home town: White
+	Rock. (Bug #499836).
+
 2007-11-22  Callum McKenzie  <callum@spooky-possum.org>
 
 	* gweather-pref.c (gweather_pref_create): The preferences dialog
